@@ -31,6 +31,7 @@ Decorated log: https://github.com/hoffstadt/DearPyGui/releases/tag/v0.3.0
 Breaking Changes:
 
 - Callbacks: All callbacks are now callables (not strings)
+- Separator: Changed "add_seperator" to "add_separator" #188
 
 Changes:
 - Widgets: Changed "add_item_color style" to "set_item_color"
